--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,17 +4,19 @@
 
     <application
         android:allowBackup="true"
+        android:appComponentFactory="android.support.v7.app.CoreComponentFactory"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:targetApi="31"
         tools:replace="android:appComponentFactory"
-        android:appComponentFactory="android.support.v7.app.CoreComponentFactory">
+        tools:targetApi="31">
 
-        <activity android:name=".MainActivity" android:exported="true">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +24,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Customer" android:exported="true">
+        <activity
+            android:name=".Customer"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.Customer" />
 
